# hypervector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  deploy_docker.sh
benchmark/: benchmark_100_threads.py  benchmark_wiki_1m.py  fbin_utils.py  import_wiki_1m.py  run_full_test.sh  test_multiple_concurrency.py  test_single_concurrent.py
cmake/: FindMKL.cmake  hypervec-config.cmake.in  link_to_hypervec_lib.cmake
demo/: demo_examples.py  demo_examples_full.sh  demo_examples_interactive.sh  demo_interactive.sh  test_hnsw.py
docker/: docker-compose.yml
docs/: arm_linux_pyhypervec_server_deployment.md  arm_python_build_and_backend_demo.md  hypervector_backend.md  pyhypervec_grpc_server.md  pyhypervec_http_server.md
pyhypervec/: pyproject.toml
pyhypervec/pyhypervec/: __init__.py  _grpc_transport.py  client.py  exceptions.py  schema.py  uri.py
scripts/: build.sh  build_arm_pyhypervec_server.sh  examples_data.py  start_all_servers.sh  start_grpc_server.sh
server/: README.md  hv.py  hypervec_backend.py  index_manager.py  main.py  scalar_store.py  store.py  test_server.py
src/: CMakeLists.txt
src/core/: hypervec_exception.cpp  id_selector.cpp  index.cpp
src/factory/: clone_index.cpp
src/include/core/: code_packer.h  distance_computer.h  hypervec_assert.h  id_selector.h  index.h  maybe_owned_vector.h  metric_type.h  platform_macros.h  simd_dispatch.h
src/include/factory/: clone_index.h
src/include/index/: index.h
src/include/index/flat/: code_packer.h  index_flat.h  index_flat_codes.h
src/include/index/hnsw/: hnsw.h  index_hnsw.h  index_hnsw_lvq.h  index_hnsw_pq.h  visited_table.h
src/include/index/idmap/: index_id_map.h
src/include/index/ivf/: index_ivf.h  index_ivf_flat.h
src/include/invlists/: block_inverted_lists.h  inverted_lists.h  inverted_lists_io_hook.h
src/include/io/: index_read_utils.h  io.h  io_macros.h  mapped_io.h
src/include/persistence/: index_io.h  index_read_utils.h  io_macros.h  mapped_io.h
src/include/quantization/lvq/: index_ivflvq.h  index_lvq.h  lvq.h  lvq_distance_computer.h
src/include/quantization/pq/: index_ivfpq.h  index_pq.h  pq.h  pq_distance_computer.h
src/include/search/: aux_index_structures.h  result_handler.h
src/include/utils/: utils.h
src/include/utils/algo/kmeans/: kmeans.h
src/include/utils/common/: buffer_list.h  interrupt_callback.h  range_search_result.h  result_handler.h
src/include/utils/distances/: distance_computer.h  distances.h  distances_dispatch.h  extra_distances.h  metric_type.h
src/include/utils/distances/fused/: distances_fused.h
src/include/utils/distances/simd_impl/: distances_autovec-inl.h  distances_simdlib256.h
src/include/utils/log/: assert.h  exception.h
src/include/utils/selector/: id_selector.h
src/include/utils/simd/: simd_dispatch.h  simd_levels.h
src/include/utils/simd/simdlib/: simdlib.h  simdlib_avx2.h  simdlib_avx512.h  simdlib_dispatch.h  simdlib_emulated.h  simdlib_neon.h  simdlib_ppc64.h
src/include/utils/structures/: aligned_table.h  heap.h  maybe_owned_vector.h  ordered_key_value.h  partitioning.h  prefetch.h  random.h  sorting.h
src/index/: index.cpp
src/index/flat/: index_flat.cpp  index_flat_codes.cpp
src/index/hnsw/: hnsw.cpp  index_hnsw.cpp  index_hnsw_lvq.cpp  index_hnsw_pq.cpp  visited_table.cpp
src/index/idmap/: index_id_map.cpp
src/index/ivf/: index_ivf.cpp  index_ivf_flat.cpp
src/invlists/: inverted_lists.cpp
src/io/: index_read.cpp  index_write.cpp  io.cpp  mapped_io.cpp
src/persistence/: index_clone.cpp  index_read.cpp  index_write.cpp  io.cpp  mapped_io.cpp
src/python/: CMakeLists.txt  __init__.py  __init__.pyi  array_conversions.py  class_wrappers.py  hypervec.proto  hypervec_bundle.py  hypervec_example_external_module.swig  hypervec_grpc_server.py  hypervec_http_server.py  hypervec_index_io.py  hypervec_meta_store.py  hypervec_pb2.py  hypervec_pb2_grpc.py  hypervec_scalar_store.py  hypervec_server_engine.py  hypervector_backend.py  loader.py  python_callbacks.cpp  python_callbacks.h  rwlock.py  setup.py  swighypervec.py  swighypervec.swig  swighypervec_avx2.swig  swighypervec_avx512_spr.swig  swighypervec_sve.swig
src/python/hypervec/: examples_data.py  extra_wrappers.py  hypervec_scalar_store.py  hypervec_server_engine.py
src/quantization/lvq/: index_ivflvq.cpp  index_lvq.cpp  lvq.cpp  lvq_distance_computer.cpp
src/quantization/pq/: index_ivfpq.cpp  index_pq.cpp  pq.cpp  pq_distance_computer.cpp
src/search/: aux_index_structures.cpp
src/utils/: utils.cpp
src/utils/algo/kmeans/: kmeans.cpp
src/utils/common/: buffer_list.cpp  interrupt_callback.cpp  range_search_result.cpp
src/utils/distances/: distances.cpp  distances_fused.cpp  distances_simd.cpp  extra_distances.cpp
src/utils/log/: exception.cpp  exception.h
src/utils/selector/: id_selector.cpp
src/utils/simd/: simd_levels.cpp
src/utils/structures/: heap.cpp  partitioning.cpp  random.cpp  sorting.cpp
stage2_test_scripts/: benchmark_100_threads.py  fbin_utils.py  (+2 more)
test/benchmarks/cpp/: CMakeLists.txt  bench_no_multithreading_rcq_search.cpp  bench_scalar_quantizer_accuracy.cpp  bench_scalar_quantizer_decode.cpp  bench_scalar_quantizer_distance.cpp  bench_scalar_quantizer_encode.cpp  utils.cpp  utils.h
test/examples/cpp/: CMakeLists.txt  demo_hnsw_graph_search.cpp  demo_hnsw_indexing.cpp  demo_hnsw_lvq_indexing.cpp  demo_hnsw_pq_indexing.cpp  demo_ivf_indexing.cpp  demo_ivflvq_indexing.cpp  demo_ivfpq_indexing.cpp  demo_lvq_indexing.cpp
test/unit_tests/cpp/: CMakeLists.txt  test_callback.cpp  test_custom_result_handler.cpp  test_distances_simd.cpp  test_factory_tools.cpp  test_heap.cpp  test_hnsw.cpp  test_index_hnsw_pq.cpp  test_index_ivfpq.cpp  test_index_pq.cpp  test_io_corrupted.cpp  test_kmeans.cpp  test_lvq.cpp  test_merge.cpp  test_mmap.cpp  test_omp_threads.cpp  test_partitioning.cpp  test_pq.cpp  test_read_index_deserialize.cpp  test_scalar_quantizer.cpp  test_simd_levels.cpp  test_simd_levels_x86_avx2.cpp  test_simd_levels_x86_avx512.cpp  test_simd_perf.cpp  test_simdlib.cpp  test_util.h  test_utils.cpp
(+20 files in other folders)
