[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhypervec"
version = "0.1.0"
description = "Python HTTP client for HyperVec server."
requires-python = ">=3.9"
dependencies = [
  "h2>=4.0",
  "httpx[http2]>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
